--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <img src="assets/avatar.jpeg" alt="avatar" class="description-avatar" />
         <p class="description-text">
           <span class="description-greeting">Hey👋!</span> I'm Tiger Abrodi, a
-          frontend developer based in Germany. Currently working at
+          frontend developer based in Germany. Working at
           <a target="_blank" href="https://tonies.de/" class="description-link"
             >Tonies</a
-          >. In my spare time I enjoy reading 📚, building side-projects 🔨,
-          doing kickboxing 🥊, contributing to Open Source 🖥️ and watching anime
-          🎞️.
+          >. In my spare time I enjoy reading books 📚, building side-projects
+          🔨, doing kickboxing 🥊, contributing to Open Source 🖥️ and watching
+          anime 🎞️.
           <br />
           React, TypeScript and GraphQL 😍.
         </p>
