--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
 
   <body>
     <div class="wrapper">
-      <div class="title-wrapper">
-        <h1 class="title-text">Tiger's Home 🏡</h1>
-      </div>
-      <div class="description-wrapper">
-        <img src="assets/avatar.jpeg" alt="avatar" class="description-avatar" />
-        <p class="description-text">
-          <span class="description-greeting">Hey👋!</span> I'm Tiger Abrodi, a
+        <h1 class="title">Tiger's Home </h1><span class="home">🏡</span>
+        <img src="assets/avatar.jpeg" alt="avatar" class="avatar" />
+        <p class="text">
+          <span class="greeting">Hey<span class="greeting__icon">👋</span>!</span> I'm Tiger Abrodi, a
           frontend developer based in Germany. Working at
-          <a target="_blank" href="https://tonies.de/" class="description-link"
+          <a target="_blank" href="https://tonies.de/" class="link"
             >Tonies</a
           >. In my spare time I enjoy reading books 📚, building side-projects
           🔨, doing kickboxing 🥊, contributing to Open Source 🖥️ and watching
@@ -36,24 +33,23 @@
           <br />
           React, TypeScript and GraphQL 😍.
         </p>
-      </div>
-      <div class="icons-wrapper">
+      <div class="icons">
         <a
           target="_blank"
           href="https://www.linkedin.com/in/tiger-abrodi-467695195/"
-          class="icon-link"
+          class="icons__link"
         >
-          <i class="fab fa-linkedin-in icon"></i>
+          <i class="fab fa-linkedin-in icons__icon"></i>
         </a>
-        <a target="_blank" href="https://twitter.com/TAbrodi" class="icon-link">
-          <i class="fab fa-twitter icon"></i>
+        <a target="_blank" href="https://twitter.com/TAbrodi" class="icons__link">
+          <i class="fab fa-twitter icons__icon"></i>
         </a>
         <a
           target="_blank"
           href="https://github.com/tigerabrodi"
-          class="icon-link"
+          class="icons__link"
         >
-          <i class="fab fa-github icon"></i>
+          <i class="fab fa-github icons__icon"></i>
         </a>
       </div>
     </div>
