--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <img src="assets/avatar.jpeg" alt="avatar" class="avatar" />
         <p class="text">
           <span class="greeting">Hey<span class="greeting__icon">👋</span>!</span> I'm Tiger Abrodi, a
-          frontend developer based in Germany. Working at
+          frontend developer based in Germany. Currently working at
           <a target="_blank" href="https://tonies.de/" class="link"
             >Tonies</a
           >. In my spare time I enjoy reading books 📚, building side-projects
           🔨, doing kickboxing 🥊, contributing to Open Source 🖥️ and watching
           anime 🎞️.
           <br />
-          React, TypeScript and GraphQL 😍.
+          React, TypeScript and GraphQL <i class="fas fa-heart icon-heart"></i>.
         </p>
       <div class="icons">
         <a
