--- a/index.html
+++ b/index.html
@@ -20,19 +20,31 @@
 
   <body>
     <div class="wrapper">
-        <h1 class="title">Tiger's Home </h1><span class="home">🏡</span>
-        <img src="assets/avatar.jpeg" alt="avatar" class="avatar" />
-        <p class="text">
-          <span class="greeting">Hey<span class="greeting__icon">👋</span>!</span> I'm Tiger Abrodi, a
-          frontend developer based in Germany. Currently working at
-          <a target="_blank" href="https://tonies.de/" class="link"
-            >Tonies</a
-          >. In my spare time I enjoy reading books 📚, building side-projects
-          🔨, doing kickboxing 🥊, contributing to Open Source 🖥️ and watching
-          anime 🎞️.
-          <br />
-          React, TypeScript and GraphQL <i class="fas fa-heart icon-heart"></i>.
-        </p>
+      <h1 class="title">Tiger's Home</h1>
+      <span class="home">🏡</span>
+      <img src="assets/avatar.jpeg" alt="avatar" class="avatar" />
+      <p class="text">
+        <span class="greeting">Hey<span class="greeting__icon">👋</span>!</span>
+        <span>
+          I'm Tiger Abrodi, a frontend developer based in Germany. I'd describe
+          myself as a craftsman who strives for quality and accessible
+          solutions. Currently working at
+          <a target="_blank" href="https://tonies.de/" class="link">Tonies</a>.
+          In my spare time I enjoy reading books 📚, building side-projects 🔨,
+          doing kickboxing 🥊, lifting weights 🏋️‍♂️, running 🏃‍♂️, contributing to
+          Open Source (OSRG Core Member) 🖥️,
+          <a
+            target="_blank"
+            href="https://tigerabrodi.hashnode.dev/"
+            class="link"
+            >writing </a
+          >✍️ and watching anime 🎞️.
+        </span>
+        <span
+          >React, TypeScript and GraphQL
+          <i class="fas fa-heart icon-heart"></i>.</span
+        >
+      </p>
       <div class="icons">
         <a
           target="_blank"
@@ -41,7 +53,11 @@
         >
           <i class="fab fa-linkedin-in icons__icon"></i>
         </a>
-        <a target="_blank" href="https://twitter.com/TAbrodi" class="icons__link">
+        <a
+          target="_blank"
+          href="https://twitter.com/TAbrodi"
+          class="icons__link"
+        >
           <i class="fab fa-twitter icons__icon"></i>
         </a>
         <a
@@ -50,6 +66,13 @@
           class="icons__link"
         >
           <i class="fab fa-github icons__icon"></i>
+        </a>
+        <a
+          target="_blank"
+          href="https://tigerabrodi.hashnode.dev/"
+          class="icons__link"
+        >
+          <i class="fas fa-pencil-alt icons__icon"></i>
         </a>
       </div>
     </div>
